objects/Critical_Issue__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Critical Issues</relationshipLabel>
        <relationshipName>Critical_Issues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of critical issue.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                    <default>true</default>
                    <label>Processing</label>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Custom object for logging critical issues.</description>
    <label>Critical Issue</label>
    <nameField>
        <label>Critical Issue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Critical Issues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>